<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>transportino_description</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="mattsays@transportino.tech">mattsays</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
